--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -2,23 +2,28 @@ FROM nginx:${VERSION}-alpine
 MAINTAINER Chris Garrett (https://github.com/chris-garrett/docker-nginx)
 LABEL description="Nginx image ${VERSION}"
 
-RUN apk --no-cache add -U ca-certificates openssl && update-ca-certificates
-RUN apk --no-cache add -U \
-  bash \
-  vim \
-  wget \
-  curl
-
-ARG DOCKERIZE_VERSION=v0.3.0
-RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-
-RUN echo "daemon off;" >> /etc/nginx/nginx.conf
-
+ARG DOCKERIZE_VERSION=v0.5.0
 COPY ./bash_aliases /home/nginx/.bashrc
 COPY ./vimrc /home/nginx/.vimrc
-RUN chown nginx:nginx /home/nginx/.bashrc /home/nginx/.vimrc \
-  && ln -sf /usr/bin/vim /usr/bin/vi
+
+RUN apk --no-cache add -U \
+    ca-certificates \
+    openssl \
+  && update-ca-certificates \
+
+  && apk --no-cache add -U \
+    bash \
+    vim \
+    wget \
+    curl \
+
+  && wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+  && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+  && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+
+  && chown nginx:nginx /home/nginx/.bashrc /home/nginx/.vimrc \
+  && ln -sf /usr/bin/vim /usr/bin/vi \
+
+  && echo "daemon off;" >> /etc/nginx/nginx.conf
 
 #USER nginx
